--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
       <div class="number"><button (click)="resultado=resultado+7" id="siete">7</button></div>
       <div class="number"><button (click)="resultado=resultado+8" id="ocho">8</button></div>
       <div class="number"><button (click)="resultado=resultado+9" id="nueve">9</button></div>
-      <div class="number"><button (click)="resultado=''" id="borrar">C</button></div>
+      <div class="number"><button (click)="resetear()" id="borrar">C</button></div>
       <div class="number"><button (click)="resultado=resultado+0" id="cero">0</button></div>
       <div class="number"><button (click)="resolver()" id="igual">=</button></div>
   </div>
