--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,17 +7,17 @@
       <div class="operadores"><button (click)="multiplicacion()" id="multiplicacion">*</button></div>
   </div>
   <div class="numeros">
-      <div class="number"><button (click)="resultado=resultado+1" id="uno">1</button></div>
-      <div class="number"><button (click)="resultado=resultado+2" id="dos">2</button></div>
-      <div class="number"><button (click)="resultado=resultado+3" id="tres">3</button></div>
-      <div class="number"><button (click)="resultado=resultado+4" id="cuatro">4</button></div>
-      <div class="number"><button (click)="resultado=resultado+5" id="cinco">5</button></div>
-      <div class="number"><button (click)="resultado=resultado+6" id="seis">6</button></div>
-      <div class="number"><button (click)="resultado=resultado+7" id="siete">7</button></div>
-      <div class="number"><button (click)="resultado=resultado+8" id="ocho">8</button></div>
-      <div class="number"><button (click)="resultado=resultado+9" id="nueve">9</button></div>
+      <div class="number"><button (click)="uno()" id="uno">1</button></div>
+      <div class="number"><button (click)="dos()" id="dos">2</button></div>
+      <div class="number"><button (click)="tres()" id="tres">3</button></div>
+      <div class="number"><button (click)="cuatro()" id="cuatro">4</button></div>
+      <div class="number"><button (click)="cinco()" id="cinco">5</button></div>
+      <div class="number"><button (click)="seis()" id="seis">6</button></div>
+      <div class="number"><button (click)="siete()" id="siete">7</button></div>
+      <div class="number"><button (click)="ocho()" id="ocho">8</button></div>
+      <div class="number"><button (click)="nueve()" id="nueve">9</button></div>
       <div class="number"><button (click)="resetear()" id="borrar">C</button></div>
-      <div class="number"><button (click)="resultado=resultado+0" id="cero">0</button></div>
+      <div class="number"><button (click)="cero()" id="cero">0</button></div>
       <div class="number"><button (click)="resolver()" id="igual">=</button></div>
   </div>
 
